홈화면 반응형 완료 :

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 html{
     background-color: black;
+    
 }
 body{
     background-image: url("./assets/bg.webp");
+    height: 100vh;
     background-size:cover;
     background-attachment: fixed;
 }
